# MySimpleBLE

./: .gitignore  CMakeLists.txt  README.md
examples/simpleble/: CMakeLists.txt
simpleble/: CMakeLists.txt
utils/: build_lib.ps1
